# anvil2dem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  buildrun.bat  clean.bat  clean.sh  r.20.24.mca.REMOVED.git-id  script.sh  testproject
cmake/Modules/: AddMockedTest.cmake
lib/nbt/: nbt.h  nbt_parsing.c  nbt_treeops.c  nbt_util.c
src/: constants.h  conversions.h  main.c  maketif.c  maketif.h  parseregion.c  parseregion.h  parseworld.c  parseworld.h  parsingutils.c  parsingutils.h  utils.h
test/: main.c  test_conversions.c  test_conversions.h
